--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "moment": "^2.17.1",
     "vue": "^2.1.0",
     "vue-resource": "^1.0.3"
   },
