--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "moment": "^2.17.1",
     "vue": "^2.1.0",
+    "vue-lazyload": "^1.0.0-rc10",
     "vue-resource": "^1.0.3"
   },
   "devDependencies": {
